--- a/roles/aggregator/templates/30-lumberjack.conf
+++ b/roles/aggregator/templates/30-lumberjack.conf
@@ -1,7 +1,7 @@
 input {
   lumberjack {
     port => {{ lumberjack_port }}
-    ssl_certificate => /etc/ssl/certs/lumberjack.crt
-    ssl_key => /etc/ssl/private/lumberjack.key
+    ssl_certificate => "/etc/ssl/certs/lumberjack.crt"
+    ssl_key => "/etc/ssl/private/lumberjack.key"
   }
 }
