--- a/roles/logstash/tasks/logstash-cpanel.yml
+++ b/roles/logstash/tasks/logstash-cpanel.yml
@@ -10,3 +10,5 @@
   sudo_user: root
   notify: Restart Logstash
 
+- name: Install Logstash LFD logging configuration
+  template: src=10-lfd.conf dest=/etc/logstash/conf.d/10-lfd.conf
