--- a/roles/logstash/templates/logstash_output.conf
+++ b/roles/logstash/templates/logstash_output.conf
@@ -1,6 +1,6 @@
 output {
     lumberjack {
-        host => "{{ aggregator_bind_ip }}"
+        hosts => "{{ aggregator_bind_ip }}"
         port => {{ lumberjack_port }}
         ssl_certificate => "/etc/ssl/certs/lumberjack.crt"
     }
