--- a/roles/aggregator/templates/30-syslog.conf
+++ b/roles/aggregator/templates/30-syslog.conf
@@ -13,6 +13,7 @@ type => syslog
 
 
 filter {
+  if ("syslog" in [type]) {
   grok {
     match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
     add_field => [ "received_at", "%{@timestamp}" ]
@@ -23,6 +24,7 @@ filter {
   date {
     match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
   }
+}
   fingerprint {
     source => ["message"]
     target => "fingerprint"
