--- a/roles/logstash/templates/10-apache.conf
+++ b/roles/logstash/templates/10-apache.conf
@@ -10,7 +10,7 @@ filter {
     if [path] =~ "access" {
       mutate { replace => { type => "apache_access" } }
       grok {
-        match => { "message" => "%{COMBINEDAPACHELOG}" }
+        match => { "message" => "%{COMMONAPACHELOG}" }
       }
       date {
         match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
