try to improve message formatting

--- a/roles/aggregator/templates/30-lumberjack.conf
+++ b/roles/aggregator/templates/30-lumberjack.conf
@@ -1,6 +1,7 @@
 input {
   lumberjack {
     port => {{ lumberjack_port }}
+	codec => rubydebug
     ssl_certificate => "/etc/ssl/certs/lumberjack.crt"
     ssl_key => "/etc/ssl/private/lumberjack.key"
   }
