--- a/roles/logstash/templates/logstash_output.conf
+++ b/roles/logstash/templates/logstash_output.conf
@@ -2,7 +2,7 @@ output {
     lumberjack {
         hosts => "{{ aggregator_bind_ip }}"
         port => {{ lumberjack_port }}
-		codec => rubydebug
+		codec => json
         ssl_certificate => "/etc/ssl/certs/lumberjack.crt"
     }
 }
