remove apache access logs from logstash (they are duplicated in packetbeat anyway)

--- a/roles/logstash/templates/10-apache.conf
+++ b/roles/logstash/templates/10-apache.conf
@@ -1,6 +1,6 @@
 input {
   file {
-    path => [ "/var/log/apache2/*.log", "/usr/local/apache/logs/access_log", "/usr/local/apache/logs/error_log" ]
+    path => [ "/var/log/apache2/*.log", "/usr/local/apache/logs/error_log" ]
     type => apache
   }
 }
