--- a/roles/logstash/templates/10-apache.conf
+++ b/roles/logstash/templates/10-apache.conf
@@ -1,7 +1,15 @@
 input {
   file {
-    path => [ "/var/log/apache2/*.log", "/usr/local/apache/logs/error_log" ]
-    type => apache
+    path => [ "/home/*/access_logs/*", "/var/log/apache2/*.log" ]
+    type => apache-access
   }
 }
+
+input {
+  file {
+    path => [ "/home/*/public_html/error_log", "/usr/local/apache/logs/error_log" ]
+    type => apache-error
+  }
+}
+
 
