--- a/roles/logstash/templates/10-apache.conf
+++ b/roles/logstash/templates/10-apache.conf
@@ -1,15 +1,9 @@
 input {
   file {
-    path => [ "/home/*/access_logs/*", "/var/log/apache2/*.log" ]
-    type => apache-access
+    path => [ "/var/log/apache2/*.log", "/usr/local/apache/logs/error_log" ]
+    type => apache
   }
 }
 
-input {
-  file {
-    path => [ "/home/*/public_html/error_log", "/usr/local/apache/logs/error_log" ]
-    type => apache-error
-  }
-}
 
 
