--- a/roles/aggregator/tasks/main.yml
+++ b/roles/aggregator/tasks/main.yml
@@ -63,29 +63,12 @@
      line='LS_HEAP_SIZE="{{aggregator.config.logstash_heap_size|int}}m"'
   notify: Restart Logstash
 
-- name: Install Logstash Local apache configuration
-  template: src=10-apache.conf dest=/etc/logstash/conf.d/10-apache.conf
-
-- name: Install Logstash Local syslog configuration
-  template: src=10-syslog.conf dest=/etc/logstash/conf.d/10-syslog.conf
-
-- name: Install Logstash Local self logging configuration
-  template: src=10-logstash.conf dest=/etc/logstash/conf.d/10-logstash.conf
-
-- name: Install Logstash ESXI logging configuration
-  template: src=20-esxi.conf dest=/etc/logstash/conf.d/20-esxi.conf
-
-- name: Install Logstash Redis logging configuration
-  template: src=30-redis.conf dest=/etc/logstash/conf.d/30-redis.conf
-
-- name: Install Logstash Syslog logging configuration
-  template: src=30-syslog.conf dest=/etc/logstash/conf.d/30-syslog.conf
-
-- name: Install Logstash Lumberjack logging configuration
-  template: src=30-lumberjack.conf dest=/etc/logstash/conf.d/30-lumberjack.conf
-
-- name: Install Logstash ES Output configuration and restart
-  template: src=99-output-elasticsearch.conf dest=/etc/logstash/conf.d/99-output-elasticsearch.conf
+- name: register templates
+  local_action: shell ls {{ inventory_dir }}/roles/aggregator/templates/logstash
+  register: template_files
+  
+- template: src={{ item }} dest=/etc/logstash/conf.d/{{item}}
+  with_items: template_files.stdout_lines
   notify: Restart Logstash
 
 - name: Schedule curator for ES
