--- a/roles/aggregator/templates/logstash/30-pfsense.conf
+++ b/roles/aggregator/templates/logstash/30-pfsense.conf
@@ -1,6 +1,6 @@
 filter {
       #change to pfSense ip address
-      if [host] =~ /109\.169\.21\.10/ {
+      if [type] == "pfsense" {
           grok {
                   add_tag => [ "firewall" ]
                   match => [ "message", "<(?<evtid>.*)>(?<datetime>(?:Jan(?:uary)?|Feb(?:ruary)?|Mar(?:ch)?|Apr(?:il)?|May|Jun(?:e)?|Jul(?:y)?|Aug(?:ust)?|Sep(?:tember)?|Oct(?:ober)?|Nov(?:ember)?|Dec(?:ember)?)\s+(?:(?:0[1-9])|(?:[12][0-9])|(?:3[01])|[1-9]) (?:2[0123]|[01]?[0-9]):(?:[0-5][0-9]):(?:[0-5][0-9])) (?<prog>.*?): (?<msg>.*)" ]
