Add support for ipv6 matching

--- a/roles/aggregator/templates/logstash/30-pfsense.conf
+++ b/roles/aggregator/templates/logstash/30-pfsense.conf
@@ -32,7 +32,7 @@ filter {
                   remove_tag => [ "multiline" ]
               }
               grok {
-                  match => [ "message", "rule (?<rule>.*)\(.*\): (?<action>pass|block) (?<direction>in|out).* on (?<iface>.*): .* proto (?<proto>TCP|UDP|IGMP|ICMP) .*\n\s*(?<src_ip>(\d+\.\d+\.\d+\.\d+))\.?(?<src_port>(\d*)) [<|>] (?<dest_ip>(\d+\.\d+\.\d+\.\d+))\.?(?<dest_port>(\d*)):" ]
+                  match => [ "message", "rule%{SPACE}(?<rule>.*)\(.*\):%{SPACE}(?<action>pass|block)%{SPACE}(?<direction>in|out)%{SPACE}on%{SPACE}(?<iface>[^:_]+)(?:_vlan%{INT:vlan})?:.*(proto|next\-header)%{SPACE} (?<proto>TCP|UDP|IGMP|ICMPv6|ICMP).*\)%{SPACE}%{IP:src_ip}\.?(?<src_port>(\d*))%{SPACE}[<|>]%{SPACE}%{IP:dest_ip}\.?(?<dest_port>(\d*)):" ]
               }
               if [prog] =~ /^dhcpd$/ {
               if [message] =~ /^DHCPACK|^DHCPREQUEST|^DHCPOFFER/ {
