add ip_version filter

--- a/roles/aggregator/templates/logstash/30-pfsense.conf
+++ b/roles/aggregator/templates/logstash/30-pfsense.conf
@@ -34,6 +34,11 @@ filter {
               grok {
                   match => [ "message", "rule%{SPACE}(?<rule>.*)\(.*\):%{SPACE}(?<action>pass|block)%{SPACE}(?<direction>in|out)%{SPACE}on%{SPACE}(?<iface>[^:_]+)(?:_vlan%{INT:vlan})?:.*(proto|next\-header)%{SPACE} (?<proto>TCP|UDP|IGMP|ICMPv6|ICMP).*\)%{SPACE}%{IP:src_ip}\.?(?<src_port>(\d*))%{SPACE}[<|>]%{SPACE}%{IP:dest_ip}\.?(?<dest_port>(\d*)):" ]
               }
+              if [src_ip] =~ /:/ {
+                  mutate { add_field => { "ip_version" => "IPv6" } }
+              }else{
+                  mutate { add_field => { "ip_version" => "IPv4" } }
+              }
               if [prog] =~ /^dhcpd$/ {
               if [message] =~ /^DHCPACK|^DHCPREQUEST|^DHCPOFFER/ {
                   grok {
