--- a/roles/aggregator/templates/logstash/25-clienttags.conf
+++ b/roles/aggregator/templates/logstash/25-clienttags.conf
@@ -1,4 +1,10 @@
 filter{
-if host == "80.1.51.122" { mutate => { add_tag => [ "PRPWindows" ] } }
+if [host] == "80.1.51.122" {
+mutate => { 
+replace => { "host" => "shop.prpwindows.co.uk" }
+replace => { "type" => "yealinksyslog" }
+add_tag => [ "PRP" ]
+}
 
+}
 }
