--- a/roles/aggregator/templates/logstash/25-clienttags.conf
+++ b/roles/aggregator/templates/logstash/25-clienttags.conf
@@ -1,10 +1,7 @@
-filter{
-if [host] == "80.1.51.122" {
-mutate => { 
-replace => { "host" => "shop.prpwindows.co.uk" }
-replace => { "type" => "yealinksyslog" }
-add_tag => [ "PRP" ]
-}
+filter {
+  if [host] == "80.1.51.122" {
+    mutate => { replace => { "host" => "shop.prpwindows.co.uk"  "type" => "yealinksyslog" } }
+    add_tag => [ "PRP" ]
+  }
 
-}
 }
