--- a/roles/aggregator/templates/logstash/25-clienttags.conf
+++ b/roles/aggregator/templates/logstash/25-clienttags.conf
@@ -1,7 +1,8 @@
 filter {
   if [host] == "80.1.51.122" {
-    mutate => { replace => { "host" => "shop.prpwindows.co.uk"  "type" => "yealinksyslog" } }
-    add_tag => [ "PRP" ]
+    mutate { 
+      replace => { "host" => "shop.prpwindows.co.uk"  "type" => "yealinksyslog" }
+      add_tag => [ "PRP" ]
+    }
   }
-
 }
