--- a/roles/aggregator/templates/logstash/30-pfsense.conf
+++ b/roles/aggregator/templates/logstash/30-pfsense.conf
@@ -10,6 +10,7 @@ filter {
               }
               date {
                   match => [ "datetime", "MMM dd HH:mm:ss" ]
+                  timezone => "UTC"
               }
               mutate {
                   replace => [ "message", "%{msg}" ]
