--- a/roles/aggregator/templates/logstash/20-syslog-518-yealink.conf
+++ b/roles/aggregator/templates/logstash/20-syslog-518-yealink.conf
@@ -1,10 +1,10 @@
 input {
   udp {
     port => 518
-    type => yealinksyslog
+    type => yealinkphonelog
   }
   tcp {
     port => 518
-    type => yealinksyslog
+    type => yealinkphonelog
   }
 }
