--- a/roles/aggregator/templates/logstash/30-yealink.conf
+++ b/roles/aggregator/templates/logstash/30-yealink.conf
@@ -1,5 +1,5 @@
 filter {
-  if ("yealinksyslog" in [type]) {
+  if ("yealinkphonelog" in [type]) {
     grok {
       match => { "message" => "\A%{SYSLOG5424PRI}%{SYSLOGTIMESTAMP}%{SPACE}%{SYSLOGHOST:syslog_hostname}: %{GREEDYDATA}" }
       add_field => [ "received_at", "%{@timestamp}" ]
