--- a/roles/aggregator/templates/logstash/30-yealink.conf
+++ b/roles/aggregator/templates/logstash/30-yealink.conf
@@ -4,7 +4,7 @@ filter {
       match => { "message" => "\A%{SYSLOG5424PRI}%{SYSLOGTIMESTAMP}%{SPACE}%{SYSLOGHOST:syslog_hostname}: %{GREEDYDATA}" }
       add_field => [ "received_at", "%{@timestamp}" ]
       add_field => [ "received_from", "%{host}" ]
-      tag_on_failure => "_grokparsefailure"
+      tag_on_failure => "_grokparsefailure_yealink"
     }
     syslog_pri { }
     date {
