--- a/roles/aggregator/templates/logstash/25-clienttags.conf
+++ b/roles/aggregator/templates/logstash/25-clienttags.conf
@@ -1,7 +1,7 @@
 filter {
   if [host] == "80.1.51.122" {
     mutate { 
-      replace => { "host" => "shop.prpwindows.co.uk"  "type" => "yealinksyslog" }
+      replace => { "host" => "shop.prpwindows.co.uk"  "type" => "yealinkphonelog" }
       add_tag => [ "PRP" ]
     }
   }
