--- a/roles/aggregator/templates/logstash/98-unmatched.conf
+++ b/roles/aggregator/templates/logstash/98-unmatched.conf
@@ -1,5 +1,8 @@
 output {
   if "_grokparsefailure_yealink" in [tags] {
-  file { path => "/var/log/yealink.log" }
+  file {
+    path => "/var/log/yealink.log"
+    codec => plain { format => "%{@timestamp} %{message}" }
+    }
   }
 }
