--- a/roles/aggregator/templates/logstash/98-unmatched.conf
+++ b/roles/aggregator/templates/logstash/98-unmatched.conf
@@ -1,8 +1,9 @@
 output {
   if "_grokparsefailure_yealink" in [tags] {
   file {
-    path => "/var/log/yealink.log"
     codec => plain { format => "%{@timestamp} %{message}" }
+    path => "/var/log/yealink-raw.log"
     }
+  file { path => "/var/log/yealink.log" }
   }
 }
