--- a/roles/aggregator/templates/logstash/98-unmatched.conf
+++ b/roles/aggregator/templates/logstash/98-unmatched.conf
@@ -5,5 +5,7 @@ output {
     path => "/var/log/yealink-raw.log"
     }
   file { path => "/var/log/yealink.log" }
+  file { codec => rubydebug path => "/var/log/yealink-debug.log" }
+  
   }
 }
